--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,6 +1,6 @@
 .input {
   display: flex;
-  width: 90%;
+  width: 95%;
   position: relative;
   align-items: center;
 }
@@ -45,19 +45,21 @@
 }
 
 .todos {
+  border-radius: 5px;
   display: flex;
-  justify-content: space-evenly;
-  width: 90%;
-  flex-wrap: wrap;
+  flex-direction: column;
+  width: 47.5%;
+  padding: 15px;
+  background-color: rgb(50, 195, 205);
 }
 
 .todoSingle {
   display: flex;
-  width: 29.5%;
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
   background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+  transition: 0.2s;
 }
 .todoSingle--text {
   flex: 1;
@@ -77,7 +79,7 @@
 }
 
 @media (max-width: 1200px) {
-  .todos__single {
+  .todoSingle {
     width: 40%;
   }
 }
@@ -86,10 +88,47 @@
   .input {
     width: 95%;
   }
+  .container {
+    width: 95%;
+    flex-direction: column;
+  }
   .todos {
     width: 95%;
+    margin-bottom: 10px;
   }
-  .todoSingle {
-    width: 100%;
-  }
+}
+
+.container {
+  width: 95%;
+  display: flex;
+  margin-top: 10px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.dragactive {
+  background-color: rgb(0, 221, 236);
+}
+
+.dragcomplete {
+  background-color: rgb(255, 38, 0);
+}
+
+.remove {
+  background-color: rgb(235, 103, 80);
+}
+
+.todosHeading {
+  font-size: 30px;
+  /* text-align: center; */
+  color: white;
+}
+
+.drag {
+  box-shadow: 0 0 20px black;
+}
+
+.todoSingle:hover {
+  box-shadow: 0 0 5px black;
+  transform: scale(1.03);
 }
